--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Arial;
+}
+
 #header {
   background-color: red;
   height: 70px;
@@ -39,7 +43,7 @@ h2 {
 }
 
 aside {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bold;
   width: 25%;
   padding-left: 15px;
